Fixed a layout issue.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ html {
 body {
   height: 100%;
   text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 article {
@@ -30,7 +32,7 @@ article {
   background: #FFF;
   box-shadow: 0 0 0 1px #EAEBEC;
   min-height: 100%;
-  max-width: 800px;
+  max-width: 100%;
 }
 
 article>:first-child {
